Cleaned up formatting issues with mis-aligned property settings and added an @media declaration.

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Auburn/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Auburn/styles/_style.scss
@@ -351,7 +351,11 @@ h3.page-header {
 /************** Home page Styles *********************/
 
 .frontPageSrchBlock {
-	padding: 30px 0 30px 0;
+    padding: 30px 0 30px 0;
+    
+    @media(min-width: $screen-sm-min) {
+        padding: 30px 0 30px 0;
+    }
     
     &>span:nth-child(2) {
         &>form {
@@ -370,12 +374,12 @@ h3.page-header {
 }
 
 .searchBlockHdr {
-	display: block;
-	color: #666;
-	font-size: 2.1em;
-	font-weight: 500;
-	margin: 0;
-	padding: 0 0 0 15px;
+    display: block;
+    color: #666;
+    font-size: 2.1em;
+    font-weight: 500;
+    margin: 0;
+    padding: 0 0 0 15px;
 }
 
 /** *************** Footer ************** */
